--- a/web-server/public/help.html
+++ b/web-server/public/help.html
@@ -3,9 +3,8 @@
         <meta charset="utf-8">
         <title></title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="/css/styles.css">
     </head>
         <h1>Help Page</h1>
     </body>
-    <script src="" async defer></script>
 </html>
