--- a/web-server/public/index.html
+++ b/web-server/public/index.html
@@ -3,9 +3,10 @@
         <meta charset="utf-8">
         <title></title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="/css/styles.css">
     </head>
         <h1>Static File</h1>
+        <img src="/img/profile.jpg" alt="">
     </body>
-    <script src="" async defer></script>
+    <script src="/js/app.js" async defer></script>
 </html>
